# CICD_gateway

./: .dockerignore  .gitignore  README.md  proj_init.sh  pyproject.toml  requirements.txt
.claude/temp/: project-context.json  session-patterns.jsonl
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
deploy/mysql/: init.sql  my.cnf
deploy/nginx/: nginx.conf  report-server.conf
deploy/nginx/conf.d/: default.conf
doc/design/: API_dependency.md  API_design.md  DFX_design.md  data_model_design.md  module_design.md  tech_design.md
doc/lint/: report-20260531.md
doc/requirement/: requirement.md  user-story.md
doc/requirement/input/: 需求描述.md
doc/testcases/: E2E.md
scripts/: backup.sh  deploy.sh  logs.sh  restart.sh  status.sh  stop.sh
src/: main.py
src/core/: config.py  database.py
src/models/: __init__.py  gate_config.py  issue_detail.py  notification_log.py  scan_result.py  scan_task.py
src/routes/: config.py  health.py  notification.py  report.py  scan.py
src/schemas/: __init__.py  common.py  config.py  notification.py  report.py  scan.py
src/services/: config_service.py  notification_service.py  report_service.py  scan_service.py
tests/: conftest.py  test_config.py  test_health.py  test_notification.py  test_report.py  test_scan.py
